# nztaxmicrosim

./: .gitignore  .gitmodules  .pre-commit-config.yaml  404.html  AGENTS.md  CHANGELOG.md  CITATION.cff  FEATURES.md  Makefile  README.md  TODO.md  feature-matrix.md  gemini.md  index.html  mkdocs.yml  nz_personal_tax_full.json  nz_personal_tax_full_updated.json  nz_personal_tax_rules.json  objects.inv  pyproject.toml  requirements-dev.txt  syspop.20250702  tox.ini
.github/: CODEOWNERS  README.md  copilot-instructions.md  dependabot.yml
CHANGELOG/: index.html
CODE_OF_CONDUCT/: index.html
CONTRIBUTING/: index.html
DEVELOPMENT/: index.html
ROADMAP/: index.html
SECURITY/: index.html
api_reference/: index.html
behavioural_response/: index.html
conf/: pipeline.yml
config/: pipeline.yaml
data_dictionary/: index.html
demographic_modelling/: index.html
development_log/: index.html
docs/: CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  README.md  ROADMAP.md  SECURITY.md  api_reference.md  behavioural_response.md  data_dictionary.md  demographic_modelling.md  development_log.md  feature_comparison.md  feature_matrix.md  historic_tax_search_plan.md  historical_reporting.md  index.md  inflation_adjustment.md  module_status.md  nz_microsim_paper.md  optimisation_module_proposal.md  parameter_coverage.md  personal_tax_history.md  personal_tax_history_1970-25_narrative.md  personal_tax_history_1970-25_table.md  policy_changes.md  reporting_plan.md  taxmicrosim_io.md  taxmicrosim_report_components.md  validation_report.md  wff_microsim_model_metadata.md
examples/: README.md  artificial_population_results.csv  basic_usage.py  dummy_data_results.csv  generate_reports.py  historical_report_config.yml  opt_config.yaml  pipeline_config.yaml  run_demographic_simulation.py  run_dynamic_simulation_with_behaviour.py  run_historical_report.py  run_inflation_adjustment.py  run_microsim_comparison.py  run_microsim_with_artificial_population.py  run_microsim_with_synthetic_population.py  run_parameter_scan.py  run_pipeline_from_config.py  run_policy_optimisation.py  run_sensitivity_analysis.py  run_validation.py  run_validation_with_dummy_data.py  scan_config.yaml
feature_comparison/: index.html
feature_matrix/: index.html
scripts/: ci.sh  (+7 more)
(+190 files in other folders)
