[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nztaxmicrosim"
version = "0.1.1"
description = "A Python-based microsimulation model for the New Zealand tax and transfer system."
readme = "README.md"
dependencies = [
    "pandas",
    "numpy",
    "optuna",
    "pydantic",
    "matplotlib",
    "seaborn",
    "joblib",
    "kedro",
    "scipy",
    "tabulate>=0.9.0",
    "requests",
    "pyyaml",
    "wbdata",
    "fastapi",
    "uvicorn",
    "celery",
    "redis",
    "faker",
    "httpx",
    "python-multipart",
]

[tool.pytest.ini_options]
pythonpath = [
    ".",
    "src",
]
testpaths = [
    "tests",
]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I"] # Error, Flake8, Warnings, Isort
ignore = []
exclude = ["syspop/"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
allow_untyped_globals = true
disable_error_code = ["var-annotated"]

[tool.coverage.run]
source = ["src"]
omit = ["*/shibokensupport/*", "signature_bootstrap.py"]

[tool.setuptools.package-data]
nztaxmicrosim = ["docs/*"]

[tool.bandit]
exclude = [".tox"]
